[package]
name = "doug_renderers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
version = "0.7.0"
default-features = false
features = ["bevy_winit", "render"]

[target.'cfg(unix)'.dependencies.bevy]
features = ["x11", "dynamic"]
